welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:10: error: not found: value O
	for ( compteur<-O to nbPas) {
                        ^